c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_member_operators/member_pointer_non_struct_pointer.c
struct a {
  int x;
  int y;
};

int main(void) {
  struct a my_struct = {1, 2};
  // can't apply -> to non-pointer
  return my_struct->x;
}